Modification des releves

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,7 @@
 /* This can be modified to make your own base theme */
-
+.autocomplete__results{
+  position:relative!important;
+}
 :root {
   /* variables for iOS components */
   --background-color: #efeff4;
